5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1680_2471.log
== SUBMITION (2019-06-27 16:43:49) 
-- CODE:
i = int(input())
im = float(input())

if i < 45 and im < 22:
	print("Baixo")
elif i < 45 and im >= 22:
	print("Medio")
elif i >= 45 and im < 22:
	print("Medio")
elif i >= 45 and im >= 22:
	print("Alto")
-- EXECUTION TIME:
0.921713
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:43:51) 
-- CODE:
i = int(input())
im = float(input())

if i < 45 and im < 22:
	print("Baixo")
elif i < 45 and im >= 22:
	print("Medio")
elif i >= 45 and im < 22:
	print("Medio")
elif i >= 45 and im >= 22:
	print("Alto")
-- OUTPUT:
Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:45:47) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if i < 45 and im < 22:
	a = ("Baixo")
elif i < 45 and im >= 22:
	a = ("Medio")
elif i >= 45 and im < 22:
	a = ("Medio")
elif i >= 45 and im >= 22:
	a = ("Alto")
print("Risco: ",a)
-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Risco:  Baixo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:45:58) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if i < 45 and im < 22:
	a = ("Baixo")
elif i < 45 and im >= 22:
	a = ("Medio")
elif i >= 45 and im < 22:
	a = ("Medio")
elif i >= 45 and im >= 22:
	a = ("Alto")
print("Risco: ",a)
-- EXECUTION TIME:
0.795537
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC  0.0
Risco:  Baixo
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC  25.0
Risco:  Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC  25.0
Risco:  Alto
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:48:25) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if i < 45 and im < 22:
	print("Risco: Baixo")
elif i < 45 and im >= 22:
	print("Risco: Medio")
elif i >= 45 and im < 22:
	print("Risco: Medio")
elif i >= 45 and im >= 22:
	print("Risco: Alto")
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Risco: Baixo
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:48:32) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if i < 45 and im < 22:
	print("Risco: Baixo")
elif i < 45 and im >= 22:
	print("Risco: Medio")
elif i >= 45 and im < 22:
	print("Risco: Medio")
elif i >= 45 and im >= 22:
	print("Risco: Alto")
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Risco: Baixo
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:48:41) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if i < 45 and im < 22:
	print("Risco: Baixo")
elif i < 45 and im >= 22:
	print("Risco: Medio")
elif i >= 45 and im < 22:
	print("Risco: Medio")
elif i >= 45 and im >= 22:
	print("Risco: Alto")
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Risco: Baixo
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:49:53) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- ERROR:
File "XXXX", line 7
    if i < 45 and im < 22:
                         ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:27) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Dados invalidos
Risco: Baixo
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:31) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Dados invalidos
Risco: Baixo
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:39) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Dados invalidos
Risco: Baixo
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:50:56) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")
else:
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 16:51:05) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")
else:
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- OUTPUT:
Entradas:  0 anos e IMC  0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 16:51:15) 
-- CODE:
i = int(input())
im = float(input())

print("Entradas: ",i,"anos e IMC ",im)
if 0 <= i > 130 or im <= 0:
	print("Dados invalidos")
else:
	if i < 45 and im < 22:
		print("Risco: Baixo")
	elif i < 45 and im >= 22:
		print("Risco: Medio")
	elif i >= 45 and im < 22:
		print("Risco: Medio")
	elif i >= 45 and im >= 22:
		print("Risco: Alto")
	if 0 <= i > 130 or im <= 0:
		print("Dados invalidos")

-- EXECUTION TIME:
0.700793
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas:  0 anos e IMC  0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas:  25 anos e IMC  25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas:  50 anos e IMC  25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
